redesigned db relationship between user and organization, adding a staff join table. Partially implemented the behavior. Worked on cleaning up some tests. Added a redirect from the devise sign_up page.

--- a/test/fixtures/organizations.yml
+++ b/test/fixtures/organizations.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: MyString
-  content: MyText
+testOrg1:
+  name: First Organization
+  content: This is a test mission statement
 
-two:
-  name: MyString
-  content: MyText
+testOrg2:
+  name: Second Organizatoin
+  content: This is the second mission statement
